@@ -1,3 +1,8 @@
+2001-03-20  Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.am (MAINTAINERCLEANFILES): Remove variable.
+	(EXTRA_DIST): Incorporate its contents.
+
 2001-03-16  Bruno Haible  <haible@clisp.cons.org>
 
 	* configure.in: Postprocess tests/Makefile to work around an
